--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,27 +1,65 @@
-!Doctype HTML
-  <html>
-    <head>
-    <style>
-    ul#menu li {
-        display:inline;
-    }
-    </style>
+<!doctype html>
+<html lang="english">
+  <head>
+     <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% if title %}
-        <title>{{ title }}</title>
-        {% else %}
-        <title> No title specified</title>
-        {% endif %}
-    </head>
-    <body>
-      <ul id="menu">
-        <li><a>Page 1</a></li>
-        <li><a>Page 2</a></li>
-        <li><a>Page 3</a></li>
-        <li><a>Page 4</a></li>
-      </ul>
-
-      <div>
-        {% block content %}{% endblock %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>No title</title>
+    {% endif %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title> No title specified</title>
+    {% endif %}
+</head>
+  <body>
+      <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="income">add incomes</a>
+          <a class="nav-item nav-link" href="income_table">income table</a>
+          <a class="nav-item nav-link" href="expenses">add expenses</a>
+          <a class="nav-item nav-link" href="expenses_table">expenses table</a>
+        </div>
       </div>
+    </nav>
+      <div class="container-fluid">
+        <div class="row">
+         
+          <div class="col-4"></div>
+            <div class="col-4">
+
+              {% block content %}{% endblock %}
+              <p></p>
+              
+              
+            </div>
+              
+          </div>
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-success">
+                 {{ message }}
+            </div>
+            {% endfor %}
+
+          {% endif %}
+        {% endwith %}
+        </div>
+      <div>
+        
+      </div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
   </html>
